# template-cmake

./: CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  bootstrap  config.h  config.h.in
include/: CMakeLists.txt  xcorr.h
lib/: CMakeLists.txt  xcorr.c
matlab/: xcorr.m
mex/: CMakeLists.txt  bootstrap.m  xcorr_mex.cxx
src/: CMakeLists.txt  xcorr.cxx
